Links now read from text file; javascript in its own file, not index.html; new icon for tray

--- a/index.html
+++ b/index.html
@@ -5,63 +5,7 @@
   </head>
   <body>
 
-    <script>
-      async function open_close_teams_win(url) {
-        let w = window.open(url);
-        await sleep(1000);
-        w.close();
-        function sleep(ms){
-          return new Promise(resolve=>{
-            setTimeout(resolve,ms)
-          })
-        }
-      }
-
-      const {remote} = require('electron');
-      const {Tray, Menu} = remote;
-      const path = require('path');
-
-      let trayIcon = new Tray(path.join('','C:\\Users\\Grossman\\AppData\\Local\\Microsoft\\Teams\\current\\resources\\assets\\windows\\TeamsSquare44x44Logo.scale-100.png'));
-
-      const trayMenuTemplate = [
-        {
-          label: 'Smart Phone Tools',
-          click: function () {
-            open_close_teams_win('https://teams.microsoft.com/l/channel/19%3a140aa97eda134028977bf2dd83a7b6c8%40thread.skype/Smart%2520Phone%2520Tools%2520(22627)?groupId=e5b360df-9183-4346-9c3a-1269f6b66e86&tenantId=1a10ce3a-da09-4841-8838-13425090cd29')
-          }
-        },
-
-        {
-          label: 'Wearable Computing',
-          click: function () {
-            open_close_teams_win('https://teams.microsoft.com/l/channel/19%3accc2aa8e2eb146918c6f642fd3381048%40thread.skype/Wearable%2520Computing%2520Technology%2520(22626)?groupId=e5b360df-9183-4346-9c3a-1269f6b66e86&tenantId=1a10ce3a-da09-4841-8838-13425090cd29')
-          }
-        },
-
-        {
-          label: 'Interesting Topics',
-          click: function () {
-            open_close_teams_win('https://teams.microsoft.com/l/channel/19%3addf568af8a4748bb891fcfebe2fb9763%40thread.skype/Interesting%2520Topics?groupId=9a114172-1fb8-4e83-ad1b-5b2b5e58cc9f&tenantId=1a10ce3a-da09-4841-8838-13425090cd29')
-          }
-        },
-        {
-          type: 'separator'
-        },
-        {
-          label: 'exit',
-          click: function () {
-            remote.getCurrentWindow().close()
-          }
-        }
-      ];
-
-      let trayMenu = Menu.buildFromTemplate(trayMenuTemplate);
-      trayIcon.setContextMenu(trayMenu);
-      trayIcon.setToolTip('Team Links');
-      trayIcon.on('click', function() {
-        trayIcon.popUpContextMenu()
-      })
-    </script>
+    <script src="index.js"></script>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
